--- a/gameDevelopment/index.html
+++ b/gameDevelopment/index.html
@@ -2,9 +2,8 @@
 <html>
   <head>
     <title>ActionBee</title>
-    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <script src="./script.js"></script>
+    <canvas id="game-canvas"></canvas>
   </body>
 </html>
